--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8084
+server.port=8084
 logging.level.org.springframework=info
 logging.level.com.example.sampleproject.learningproject=debug
 spring.mvc.view.prefix=/WEB-INF/jsp/
